# ImageDerivatives

./: .gitignore  CMakeLists.txt  EdgeDetection.cpp  EdgeDetection.h  FourierTransformation.cpp  FourierTransformation.h  GeometricTransform.cpp  GeometricTransform.h  HoughTransform.cpp  HoughTransform.h  HoughTransformRound.cpp  ImageEnhancement.cpp  ImageEnhancement.h  ImageProccessing.cpp  ImageProccessing.h  Source.cpp
